Fix long standing FIXME in parseNumericColor about not doubly clamping color components https://bugs.webkit.org/show_bug.cgi?id=221194

Reviewed by Darin Adler.

* css/parser/CSSParserFastPaths.cpp:
(WebCore::parseColorIntOrPercentage):
(WebCore::parseAlphaValue):
Switch to returning an Optional<uint8_t> and add assertion that the component
is clamped. Use convertFloatAlphaTo helper in parseAlphaValue to remove some
duplicate logic.

(WebCore::parseNumericColor):
Replace call to makeFromComponentsClamping with calling the constructors directly
now that the types are correct.


Canonical link: https://commits.webkit.org/233602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272226 268f45cc-cd09-0410-ab3c-d52691b4dbfc